removed redundant components and utils, added estimated arrival time and distance in meters

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,12 @@ h1 {
   overflow: hidden;
   overflow-y: scroll; 
 }
+
+.incomingbusses {
+  list-style-type: none;
+  padding: 0;
+}
+
 .stopslist {
   background-color: lightskyblue;
   -webkit-user-select: none;  
