--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 body {
   background: url("./Img/bckk2.png");
   background-repeat: no-repeat;
-  background-position-x: 51%;
+  background-position-x: 50%;
   background-color: #161616;
 }
 
@@ -117,6 +117,10 @@ input[type="text"]:focus {
   outline: none;
 }
 
+input[type="text"]::placeholder {
+  color: #1e1e1e;
+}
+
 .loadercontainer {
   display: inline-block;
   height: 18px;
@@ -178,6 +182,10 @@ input[type="text"]:focus {
   font-family: "Fjalla One", sans-serif;
 }
 
+.stoploader {
+  color: #d48a00;
+}
+
 .stopname {
   font-size: 1.05em;
   margin-top: 3px;
@@ -201,6 +209,7 @@ input[type="text"]:focus {
 }
 
 .visiblestops {
+  z-index: 999;
   position: absolute;
   width: 174px;
 }
